# src/controllers/review.controller.ts
@@ -1,28 +1,39 @@
-import { Controller, Get, Post, Route, Tags } from "tsoa";
+import { Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch } from "tsoa";
 import { ReviewDTO } from "../dto/review.dto";
-import { ReviewService } from "../services/review.service";
-import { Review } from "../models/review.model";
+import { reviewService } from "../services/review.service";
 @Route("reviews")
 @Tags("Reviews")
 export class ReviewController extends Controller {
-
-    // Récupère tous les avis
+    
     @Get("/")
     public async getAllReviews(): Promise<ReviewDTO[]> {
-        return new ReviewService().getAllReviews();
+      return reviewService.getAllReviews();
     }
-
-
-    // Récupère un avis par ID
+  
     @Get("{id}")
-    public async getReviewById(id: number): Promise<ReviewDTO | null> {
-        return new ReviewService().getReviewById(id);
+    public async getReviewById(@Path() id: number): Promise<ReviewDTO | null> {
+      return reviewService.getReviewById(id);
     }
-
+  
     @Post("/")
-    public async createReview(requestBody: ReviewDTO): Promise<ReviewDTO> {
-        const { review_text, rating, game } = requestBody;
-        return new ReviewService().createReview(review_text, rating, game);
+    public async createReview(
+      @Body() requestBody: ReviewDTO
+    ): Promise<ReviewDTO> {
+      const { game_id, rating } = requestBody;
+      return reviewService.createReview(game_id, rating);
     }
-
+  
+    @Delete("{id}")
+    public async deleteReview(@Path() id: number): Promise<void> {
+      await reviewService.deleteReview(id);
+    }
+  
+    @Patch("{id}")
+    public async updateReview(
+      @Path() id: number,
+      @Body() requestBody: ReviewDTO
+    ): Promise<ReviewDTO | null> {
+      const { game_id, rating } = requestBody;
+      return reviewService.updateReview(id, game_id, rating);
+    }
 }
