# src/dto/review.dto.ts
@@ -2,7 +2,7 @@ import { GameDTO } from "./game.dto";
 
 export interface ReviewDTO {
     id?: number;
-    review_text: string;
+    game_id: number;
     rating: number;
-    game?: GameDTO;
+    review_text?: string;
 }
